Tue Dec 29 17:54:16 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ignored_block): warn if a block is given to `using`,
	  which is probably for `Module.new`.

Tue Dec 29 12:48:34 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/ostruct.rb (OpenStruct): make respond_to? working on
	  just-allocated objects for workaround of Psych.
	  [ruby-core:72501] [Bug #11884]

Tue Dec 29 12:46:13 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/ostruct.rb (OpenStruct): make respond_to? working on
	  just-allocated objects for workaround of Psych.
	  [ruby-core:72501] [Bug #11884]

Tue Dec 29 10:35:00 2015  Kenta Murata  <mrkn@mrkn.jp>

	* test/mkmf/test_have_func.rb (test_have_func):
	  Add assertion to examine the existence of HAVE_RUBY_INIT.

	* test/mkmf/test_have_func.rb (test_not_have_func):
	  Add assertion to examine the absence of HAVE_RUBY_INIT.

Tue Dec 29 06:50:42 2015  Eric Wong  <e@80x24.org>

	* thread_sync.c: static classes

Tue Dec 29 05:30:30 2015  Eric Wong  <e@80x24.org>

	* lib/resolv.rb (Resolv::IPv6.create): avoid modifying frozen
	* test/resolv/test_dns.rb (test_ipv6_create): test for above
	  [Bug #11910] [ruby-core:72559]

Mon Dec 28 14:55:57 2015  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_string.rb (TestString#test_rstrip_bang): Add test
	  for String#rstrip!.  [Fix GH-1176]

Mon Dec 28 09:18:53 2015  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_string.rb (TestString#test_lstrip_bang): Add test
	  for String#lstrip!.  [Fix GH-1176]

Sun Dec 27 23:32:26 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_variant2val): refactoring.

Sun Dec 27 21:14:42 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c (rb_execarg_parent_start1): need to convert the encoding to
	  ospath's one.

Sun Dec 27 20:54:22 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c: use rb_w32_uchdir() instead of plain chdir() on Windows.
	  reported by naruse via twitter.
